# ChangeLog for vmware overlay
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $ Id: $

  14 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>:
  Well, I've done quite a few changes.
  
  - Ported all of the remaining code from src_install in vmware-workstation to
  vmware.eclass
  - Ported vmware-workstation 3.x and 4.x to vmware-modules and the
  vmware.eclass
  - Removed all older versions/revisions that are currently in the portage tree,
  as they're unnecessary
  - Marked the new 5.5 version of vmware-workstation as ~amd64 and ~x86 as it
  has now been tested and appears to work just fine

  13 Jun 2006; Mike Auty <ikeloes@gentoo.org>:
  Also today, I removed the last few svn:keywords that meant I had to keep
  recalculating the manifests.  Handy though they might have been, it's easier
  to do revbumps to differentiate the versions, than it is to manually keep 
  redoing those manifests and checking them back in again...
  
  13 Jun 2006; Mike Auty <ikelos@gentoo.org>:
  Added revision bumps for vmware-player-1 and vmware-workstation-5.5, to use
  the new style vmware-modules ebuilds.  These haven't been tested at all, but
  are also keyworded "-*" so shouldn't cause any problems.  I've also added 
  the required ebuilds for when vmware-workstations-{3,4} get given the 
  vmware.eclass treatment.

  Let me just reiterate that these ebuilds are *extremely* untested, not just
  the normal untested you're used to...  5;)

  07 Jun 2006; Mike Auty <ikelos@gentoo.org>:
  Added a vmware-mod.eclass, and associated vmware-modules-1.0.0.15.ebuild for
  vmware-server-1.0.0.24927.  As soon as an any-any update comes out that
  supports this version, the ebuild will be altered to use that instead.
  
  In the meantime, I've published a small tar file containing the sources from
  the vmware-server release itself.  Hopefully this won't happen very often. 
  I've also added a vmware-modules-1.0.0.14.ebuild, which I'll eventually move 