@@ -53,10 +53,10 @@ EBUILD vmware-player-1.0.1.19317-r4.ebuild 4421 RMD160 d01404c235d75ca4abb21fcef
 MD5 eb6fbd384f0f93ae9e0efc09874e0261 vmware-player-1.0.1.19317-r4.ebuild 4421
 RMD160 d01404c235d75ca4abb21fcefcfceb1e3d842b13 vmware-player-1.0.1.19317-r4.ebuild 4421
 SHA256 6912dd454b344f7668ca2a8bac6a3ed93999b6580633bb704a91fb071530c8a8 vmware-player-1.0.1.19317-r4.ebuild 4421
-EBUILD vmware-player-1.0.1.19317-r5.ebuild 4361 RMD160 14a4e9b407dacd1e9f15d9a94f6b7363d44b6445 SHA1 9cfcbd72866d44599964d58974d0df3b400b580e SHA256 4d1e5eb9382fd872f55b37abbc9586d52080b89e0669308a93836bf9c7ca3ff3
-MD5 41483c8b0b308102df4eb820c0b7046c vmware-player-1.0.1.19317-r5.ebuild 4361
-RMD160 14a4e9b407dacd1e9f15d9a94f6b7363d44b6445 vmware-player-1.0.1.19317-r5.ebuild 4361
-SHA256 4d1e5eb9382fd872f55b37abbc9586d52080b89e0669308a93836bf9c7ca3ff3 vmware-player-1.0.1.19317-r5.ebuild 4361
+EBUILD vmware-player-1.0.1.19317-r5.ebuild 3421 RMD160 70782b2a9c8c6a794b2b486194cc558c75d2c048 SHA1 5f0e4c243354d2d68061012aaaa14c0777205111 SHA256 67412fa3f8bf68db7691a6b054c64bb7c2f5b05e599230378364a8153db5ee05
+MD5 1d17b88b6528d5b6b83b6dd0f3290716 vmware-player-1.0.1.19317-r5.ebuild 3421
+RMD160 70782b2a9c8c6a794b2b486194cc558c75d2c048 vmware-player-1.0.1.19317-r5.ebuild 3421
+SHA256 67412fa3f8bf68db7691a6b054c64bb7c2f5b05e599230378364a8153db5ee05 vmware-player-1.0.1.19317-r5.ebuild 3421
 MISC ChangeLog 3271 RMD160 b181d1ac8ce4df3a9c6a2807482a273803045b85 SHA1 58ef63b730c1bae0cdf764c82f5e19934f85216f SHA256 a35a4da046b4c1df837ff5c2aa453616b8739d5c27fa290357ceb5ae82a64a3a
 MD5 9d571bbc8a5e1e803082db2a2fca0e72 ChangeLog 3271
 RMD160 b181d1ac8ce4df3a9c6a2807482a273803045b85 ChangeLog 3271
@@ -71,6 +71,6 @@ SHA256 bd714c9a2ce3b52e842099ea20d9e5aa917b0d0d0e758df334c426563c159084 files/di
 MD5 1a39355473a3e8ccbb43066bb59d3b11 files/digest-vmware-player-1.0.1.19317-r4 485
 RMD160 60090a1fdf14981d45257972888a772a6b7a7e4c files/digest-vmware-player-1.0.1.19317-r4 485
 SHA256 62bea80b5102a82d70ddf403735bab06ca86d4a3b5db4f501c75d3a2c7995734 files/digest-vmware-player-1.0.1.19317-r4 485
-MD5 1a39355473a3e8ccbb43066bb59d3b11 files/digest-vmware-player-1.0.1.19317-r5 485
-RMD160 60090a1fdf14981d45257972888a772a6b7a7e4c files/digest-vmware-player-1.0.1.19317-r5 485
-SHA256 62bea80b5102a82d70ddf403735bab06ca86d4a3b5db4f501c75d3a2c7995734 files/digest-vmware-player-1.0.1.19317-r5 485
+MD5 0d2ab32e5622d011b7e46c772e9ed475 files/digest-vmware-player-1.0.1.19317-r5 759
+RMD160 41e7a0dac4dcbf40d91cb01621898aaadbe64fb7 files/digest-vmware-player-1.0.1.19317-r5 759
+SHA256 bd714c9a2ce3b52e842099ea20d9e5aa917b0d0d0e758df334c426563c159084 files/digest-vmware-player-1.0.1.19317-r5 759
