@@ -1,6 +1,9 @@
 MD5 58d0aab1f3303dfb5354a929bcf1b0e9 VMware-player-1.0.1-19317.tar.gz 35786922
 RMD160 7ba3c6cefaf6fb98cc932d0974206b6b0f408a29 VMware-player-1.0.1-19317.tar.gz 35786922
 SHA256 c4b0e43ef7e56803e8bc822f2ab240bd2911019dca2d6a615e76dc41642cb4bf VMware-player-1.0.1-19317.tar.gz 35786922
+MD5 b3ce457f5b9ae8b606fd70f56084877d vmware-any-any-update101.tar.gz 296409
+RMD160 d8994b91492257d8b8e08480ab27fc307fc34095 vmware-any-any-update101.tar.gz 296409
+SHA256 b12e3a70117ef26a85c8e01a23ea7d21b62bbc86998368114f9f7932390d2037 vmware-any-any-update101.tar.gz 296409
 MD5 7ca1ec14670b51d8cf824a58bc8d6621 vmware.png 470
 RMD160 759a5530b3bb605e6bc2c1e203490163d320485d vmware.png 470
 SHA256 9bec91ecc32fa913141ca303abf1abec988ebc7fb4f27389f173bf3493bffb9b vmware.png 470
