@@ -2,6 +2,14 @@
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
 # $ Id: $
 
+  16 Jun 2006; Mike Auty <ikelos@gentoo.org>:
+  Just a couple quick changes.
+  I modified the vmware-player-1.0.x-r5 ebuild, just a bit of clearing up.
+  I also fixed a tiny typo in the vmware.eclass.
+
+  vmware-player now seems to be a go with the new modules on ~x86 (although I've
+  left it masked).
+
   14 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>:
   Well, I've done quite a few changes.
   
